mobile review header overflow issues

--- a/media/css/devreg/reviewers.less
+++ b/media/css/devreg/reviewers.less
@@ -1769,6 +1769,18 @@ iframe#manifest-contents {
             top: 8px;
         }
     }
+    #review-files table.activity {
+        margin: 0;
+    }
+    .devhub-links, .account-links {
+        display: none;
+    }
+    .upper-header {
+        width: auto;
+    }
+    #site-nav nav.menu-nav li a {
+        font-size: 14px;
+    }
 }
 
 @media @landscape-max {
